--- a/style.css
+++ b/style.css
@@ -5,32 +5,32 @@
     box-sizing: border-box;
 }
 body{
-    background-color:rgb(0, 0, 0);
+    background-color:rgb(201, 196, 196);
 }
 header {
     text-align: center;
-    background-color: rgb(65, 64, 64);
+    background-color: rgb(107, 226, 176);
 }
 .icon{
     display:block;
     cursor: pointer;
 }
 nav {
-    display: none;
-    background-color: rgb(65,64,64);
+    display:none;
+    background-color: rgb(107, 226, 176);
 }
 nav li {
     display:inline-block;
 }
 nav li a {
-    color: rgb(248, 19, 3);
+    color: rgb(0, 0, 0);
     text-decoration: none;
     display: inline-block;
     padding: 10px;
     border-radius: 5px;
 }
 nav li a:hover {
-    background-color: rgb(248, 3, 3);
+    background-color: rgba(3, 7, 248, 0.87);
     color: rgb(255, 255, 255);
 
 }
